// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev 1`] = `
Object {
  "mac": Array [],
}
`;

exports[`mas 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;

exports[`mas and 7z 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.7z",
      "safeArtifactName": "TestApp-1.1.0-mac.7z",
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.pkg",
      "safeArtifactName": "TestApp-1.1.0.pkg",
    },
  ],
}
`;
